--- a/basics/templates/basics/home.html
+++ b/basics/templates/basics/home.html
@@ -60,15 +60,21 @@
   <div class="row">
  		 <div class="[ col-xs-12 col-sm-offset-2 col-sm-8 ]">
  			 <ul class="event-list">
- 				 <li>
-
+         {%  %}
+         <li>
+ 				 	<time datetime="2014-07-20 2000">
+ 						 <span class="day">31</span>
+ 						 <span class="month">Jan</span>
+ 						 <span class="year">2014</span>
+ 						 <span class="time">04:20 PM</span>
+ 					 </time>
  					 <div class="info">
  						 <h2 class="title">Beispielüberschrift</h2>
  						 <p class="desc">Irgend eine Beschreibung</p>
         	<ul>
- 							 <li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-map-marker"></span> Distance</a></li>
-               <li style="width:20%;"> <span class="glyphicon glyphicon-heart"></span> Help</li>
-               <li style="width:20%;"> <span class="glyphicon glyphicon-thumbs-up"></span> Like</li>
+ 							 <li style="width:33%;">got: 1<span class="glyphicon glyphicon-ok"></span></li>
+ 							 <li style="width:34%;">need: 3<span class="fa fa-question"></span></li>
+ 							 <li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-map-marker"></span>Location</a></li>
  						 </ul>
  					 </div>
 
