superuser hat keine profilseite (es gab einen fehler wenn ein superuser auf sein profil gehen wollte)

--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -90,7 +90,9 @@
 
 						<ul class="nav navbar-nav navbar-right">
 							<li {% if "/help/" in request.path %} class="active" {% endif %}><a href="{% url 'basics:help'%}"><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span> Help</a></li>
+							{% if not user.is_superuser %}
 							<li {% if "/profil/" in request.path %} class="active" {% endif %}><a href="{% url 'basics:profil' %}"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Profil</a></li>
+							{% endif %}
 							<li><a href="{% url 'basics:logout' %}"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Logout</a></li>
 						</ul>
 					</div><!-- /.navbar-collapse -->
