change password avavailable

--- a/basics/templates/basics/profil_edit.html
+++ b/basics/templates/basics/profil_edit.html
@@ -23,7 +23,7 @@
 					</div>
 
 					<div class="form-group">
-						<input type="submit" class="btn btn-block btn-lg btn-primary" value="Save"/>
+						 <a class="btn-sm"href="{% url 'basics:change_password' %}">Change password</a> <input type="submit" class="btn btn-block btn-lg btn-primary" value="Save"/>
 					</div>
 				</form>
 			</div>
