--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="{% static 'basics/css/event-list.css' %}">
     <link rel="stylesheet" href="{% static 'basics/css/navbar_footer.css' %}">
 	<link rel="stylesheet" href="{% static 'basics/css/startpage.css' %}">
+	<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 	<style>
 		* {
 	    		margin: 0;
@@ -177,7 +178,7 @@
 
 		<div class="container" id="content">
 		{% block content %}
-    		{% endblock %}
+    	{% endblock %}
 		</div>
 
 		<div id="footer">
