--- a/basics/templates/basics/password_reset.html
+++ b/basics/templates/basics/password_reset.html
@@ -14,6 +14,21 @@
 	  				<div class="form-group">
 	  					<input type="email" class="form-control input-lg" placeholder="Email" name="email" required/>
 	  				</div>
+
+            {% if messages %}
+                {% for message in messages %}
+                  {% if message.message == 'wc' %}
+                  <div class="form-group">
+                    <div class="error-messages">
+                        <p>Proof that you are not a robot by solving the reCAPTCHA.</p>
+                  </div>
+                </div>
+                  {% endif %}
+                {% endfor %}
+            {% endif %}
+            <div class="form-group">
+              <div class="g-recaptcha" data-sitekey="6LdLNSETAAAAAPANCWc4cOCvtDAL3I6GYWwdI8j8" style="transform:scale(0.77);-webkit-transform:scale(0.77);transform-origin:0 0;-webkit-transform-origin:0 0;"></div>
+              </div>
 	  				<div class="form-group">
 	  					<input type="submit" class="btn btn-block btn-lg btn-primary" value="Send"/>
 	  				</div>
