need und information timelines geändert

--- a/basics/templates/basics/information_timeline.html
+++ b/basics/templates/basics/information_timeline.html
@@ -145,8 +145,8 @@
  					 </time>
 
  					 <div class="info">
- 						 <h2 class="title">Disney Junior Live On Tour!</h2>
- 						 <p class="desc"> Pirate and Princess Adventure</p>
+ 						 <h2 class="title">Building on Fire, Street blocked</h2>
+ 						 <p class="desc">description of the place, alternative routes</p>
  						 <ul>
  							 <li style="width:33%;">comments (5)</li>
  							 <li style="width:34%;">write comment<span class="fa fa-question"></span></li>
