--- a/basics/templates/basics/needs_timeline.html
+++ b/basics/templates/basics/needs_timeline.html
@@ -57,11 +57,11 @@
  						 <span class="time">04:20 PM</span>
  					 </time>
  					 <div class="info">
- 						 <h2 class="title">Beispielüberschrift</h2>
- 						 <p class="desc">Irgend eine Beschreibung</p>
+ 						 <h2 class="title">Emergency generator</h2>
+ 						 <p class="desc">we need electricity!</p>
         	<ul>
  							 <li style="width:33%;">got: 1<span class="glyphicon glyphicon-ok"></span></li>
- 							 <li style="width:34%;">need: 3<span class="fa fa-question"></span></li>
+ 							 <li style="width:34%;">need: 1<span class="fa fa-question"></span></li>
  							 <li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-map-marker"></span>Location</a></li>
  						 </ul>
  					 </div>
@@ -131,13 +131,12 @@
  					 </time>
 
  					 <div class="info">
- 						 <h2 class="title">Disney Junior Live On Tour!</h2>
- 						 <p class="desc"> Pirate and Princess Adventure</p>
+ 						 <h2 class="title">Bed sheets</h2>
+ 						 <p class="desc"> need a few bed sheets</p>
  						 <ul>
- 							<li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-pencil"></span> keep writing</a></li>
-               				<li style="width:20%;"> <span class="glyphicon glyphicon-ok"></span> Completed?</li>
-               				<li style="width:20%;"> <span class="glyphicon glyphicon-thumbs-up"></span> Like</li>
-							<li style="width:20%;"> <span class="glyphicon glyphicon-flag"></span> Report</li>
+ 							<li style="width:33%;">got: 1<span class="glyphicon glyphicon-ok"></span></li>
+               <li style="width:34%;">need: 3<span class="fa fa-question"></span></li>
+               <li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-map-marker"></span>Location</a></li>
  						 </ul>
  					 </div>
  					 <div class="social">
