--- a/basics/templates/basics/contact_us.html
+++ b/basics/templates/basics/contact_us.html
@@ -1,12 +1,31 @@
 {% extends 'basics/base.html' %}
+
 {% block content %}
-       <!-- Introduction Row -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">contact us
-                    <small>We are undemanding.</small>
-                </h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?</p>
-            </div>
-        </div>
+<!-- Introduction Row -->
+	<div class="modal-dialog" id="sign-up">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h1 class="text-center">contact us <small>We are undemanding</small></h1>
+			</div>
+			<div class="modal-body">
+				<form class="form" role="form" method="post" accept-charset="UTF-8" id="login-nav">
+					{%csrf_token%}
+					<p style="font-size:160%;"> description <p\>
+						<div class="form-group">
+		  					<input type="email" class="form-control input-lg" placeholder="Email" name="email" required/>
+		  				</div>
+						<div class="form-group">
+							<input type="description" class="form-control input-lg" placeholder="headline" name="headline"  rows="4"></textarea>
+						</div>
+					<div class="form-group">
+						<textarea type="description" class="form-control input-lg" placeholder="description" name="text" rows="4"></textarea>
+					</div>
+
+					<div class="form-group">
+						<input type="submit" class="btn btn-block btn-lg btn-primary" value="Send"/>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
 {% endblock %}
