--- a/basics/templates/basics/home.html
+++ b/basics/templates/basics/home.html
@@ -59,94 +59,29 @@
   <br>
   <div class="row">
  		 <div class="[ col-xs-12 col-sm-offset-2 col-sm-8 ]">
+
  			 <ul class="event-list">
+         {% for need in needs%}
          <li>
- 				 	<time datetime="2014-07-20 2000">
- 						 <span class="day">31</span>
- 						 <span class="month">Jan</span>
- 						 <span class="year">2014</span>
- 						 <span class="time">04:20 PM</span>
- 					 </time>
- 					 <div class="info">
- 						 <h2 class="title">Beispielüberschrift</h2>
- 						 <p class="desc">Irgend eine Beschreibung</p>
-        	<ul>
- 							 <li style="width:33%;">got: 1<span class="glyphicon glyphicon-ok"></span></li>
- 							 <li style="width:34%;">need: 3<span class="fa fa-question"></span></li>
- 							 <li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-map-marker"></span>Location</a></li>
- 						 </ul>
- 					 </div>
+            <time datetime="2014-07-20 2000">
+               <span class="day">20</span>
+               <span class="month">Jan</span>
+               <span class="year">2014</span>
+               <span class="time">9:41 PM</span>
+             </time>
+           <div class="info">
+             <h2 class="title">{{ need.headline }}</h2>
+             <p class="desc">{{ need.text }}</p>
+            <ul>
+               <li style="width:33%;">comments (3)</li>
+               <li style="width:34%;">write comment<span class="fa fa-question"></span></li>
+               <li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-map-marker"></span>Location</a></li>
+               <li style="width:20%;"> <span class="glyphicon glyphicon-thumbs-up"></span> Like</li>
+             </ul>
+           </div>
 
- 				 </li>
-
- 				 <li>
- 					 <div class="info">
- 						 <h2 class="title">One Piece Unlimited World Red</h2>
- 						 <p class="desc">PS Vita</p>
- 						 <ul>
- 							 <li style="width:50%;"><a href="#website"><span class="fa fa-globe"></span> Website</a></li>
- 							 <li style="width:50%;"><span class="fa fa-money"></span> $39.99</li>
- 						 </ul>
- 					 </div>
- 					 <div class="social">
- 						 <ul>
- 							 <li class="facebook" style="width:33%;"><a href="#facebook"><span class="fa fa-facebook"></span></a></li>
- 							 <li class="twitter" style="width:34%;"><a href="#twitter"><span class="fa fa-twitter"></span></a></li>
- 							 <li class="google-plus" style="width:33%;"><a href="#google-plus"><span class="fa fa-google-plus"></span></a></li>
- 						 </ul>
- 					 </div>
- 				 </li>
-
- 				 <li>
- 					 <time datetime="2014-07-20 2000">
- 						 <span class="day">20</span>
- 						 <span class="month">Jan</span>
- 						 <span class="year">2014</span>
- 						 <span class="time">8:00 PM</span>
- 					 </time>
-
- 					 <div class="info">
- 						 <h2 class="title">Mouse0270's 24th Birthday!</h2>
- 						 <p class="desc">Bar Hopping in Erie, Pa.</p>
- 						 <ul>
- 							 <li style="width:33%;">1 <span class="glyphicon glyphicon-ok"></span></li>
- 							 <li style="width:34%;">3 <span class="fa fa-question"></span></li>
- 							 <li style="width:33%;">103 <span class="fa fa-envelope"></span></li>
- 						 </ul>
- 					 </div>
- 					 <div class="social">
- 						 <ul>
- 							 <li class="facebook" style="width:33%;"><a href="#facebook"><span class="fa fa-facebook"></span></a></li>
- 							 <li class="twitter" style="width:34%;"><a href="#twitter"><span class="fa fa-twitter"></span></a></li>
- 							 <li class="google-plus" style="width:33%;"><a href="#google-plus"><span class="fa fa-google-plus"></span></a></li>
- 						 </ul>
- 					 </div>
- 				 </li>
-
- 				 <li>
- 					 <time datetime="2014-07-31 1600">
- 						 <span class="day">31</span>
- 						 <span class="month">Jan</span>
- 						 <span class="year">2014</span>
- 						 <span class="time">4:00 PM</span>
- 					 </time>
-
- 					 <div class="info">
- 						 <h2 class="title">Disney Junior Live On Tour!</h2>
- 						 <p class="desc"> Pirate and Princess Adventure</p>
- 						 <ul>
- 							 <li style="width:33%;">$49.99 <span class="fa fa-male"></span></li>
- 							 <li style="width:34%;">$29.99 <span class="fa fa-child"></span></li>
- 						 </ul>
- 					 </div>
- 					 <div class="social">
- 						 <ul>
- 							 <li class="facebook" style="width:33%;"><a href="#facebook"><span class="fa fa-facebook"></span></a></li>
- 							 <li class="twitter" style="width:34%;"><a href="#twitter"><span class="fa fa-twitter"></span></a></li>
- 							 <li class="google-plus" style="width:33%;"><a href="#google-plus"><span class="fa fa-google-plus"></span></a></li>
- 						 </ul>
- 					 </div>
- 				 </li>
+         </li>
+         {% endfor %}
  			 </ul>
  		 </div>
  	 </div>
