--- a/basics/templates/basics/information_all.html
+++ b/basics/templates/basics/information_all.html
@@ -1,29 +1,108 @@
 {% extends 'basics/base.html' %}
 
 {% block content %}
-<!-- Introduction Row -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">get all Information in your region</h1>
-                <table class="table table-hover">
-                	<thead>
-                		<tr>
-                			<th>Headline</th>
-                			<th>User</th>
-                			<th>Date</th>
-                		</tr>
-                	</thead>
-                	<tbody>
-		                {% for info in infos%}
-		                <tr>
-		                	<th>{{info.headline}}</th>
-		                	<th>{{info.author.username}}</th>
-		                	<th>{{info.date}}</th>
-		                </tr>
-		                {% endfor %}
-	                </tbody>
-            	</table>
-            </div>
-        </div>
-{% endblock %}
+<div class="row">
 
+  <div class="[ col-xs-12 col-sm-offset-2 col-sm-8 ]">
+  <!--<div class="btn-group">
+    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      Action <span class="caret"></span>
+    </button>
+    <ul class="dropdown-menu">
+      <li><a href="#">Action</a></li>
+      <li><a href="#">Another action</a></li>
+      <li><a href="#">Something else here</a></li>
+      <li role="separator" class="divider"></li>
+      <li><a href="#">Separated link</a></li>
+    </ul>
+
+  </div>
+  -->
+    <div class="btn-group">
+      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Range <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu">
+        <li><a href="#">5 km</a></li>
+        <li><a href="#">10 km</a></li>
+        <li><a href="#">20 km</a></li>
+        <li role="separator" class="divider"></li>
+        <li><a href="#">100 km</a></li>
+      </ul>
+    </div>
+    <div class="btn-group">
+      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Category <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu">
+        <li><a href="#">Water</a></li>
+        <li><a href="#">Energy</a></li>
+        <li><a href="#">Pokemon</a></li>
+        <li role="separator" class="divider"></li>
+        <li><a href="#">Separated link</a></li>
+      </ul>
+    </div>
+    <div class="btn-group pull-right">
+      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Cards per Page <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu">
+        <li><a href="#">10</a></li>
+        <li><a href="#">25</a></li>
+        <li><a href="#">50</a></li>
+        <li role="separator" class="divider"></li>
+        <li><a href="#">All</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
+<br>
+<div class="row">
+   <div class="[ col-xs-12 col-sm-offset-2 col-sm-8 ]">
+
+     <ul class="event-list">
+       {% for info in infos%}
+       <li>
+          <time datetime="2014-07-20 2000">
+             <span class="day">20</span>
+             <span class="month">Jan</span>
+             <span class="year">2014</span>
+             <span class="time">9:41 PM</span>
+           </time>
+         <div class="info">
+           <h2 class="title">{{ info.headline }}</h2>
+           <p class="desc">{{ info.text }}</p>
+          <ul>
+             <li style="width:33%;">comments (3)</li>
+             <li style="width:34%;">write comment<span class="fa fa-question"></span></li>
+             <li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-map-marker"></span>Location</a></li>
+             <li style="width:20%;"> <span class="glyphicon glyphicon-thumbs-up"></span> Like</li>
+           </ul>
+         </div>
+
+       </li>
+       {% endfor %}
+     </ul>
+   </div>
+ </div>
+ <div class="row">
+   <div class="[ col-xs-12 col-sm-offset-2 col-sm-8 ] text-center">
+     <nav>
+       <ul class="pagination">
+         <li class="disabled"><a href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
+         <li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
+         <li><a href="#">2</a></li>
+         <li><a href="#">3</a></li>
+         <li><a href="#">4</a></li>
+         <li><a href="#">5</a></li>
+         <li>
+           <a href="#" aria-label="Next">
+             <span aria-hidden="true">&raquo;</span>
+           </a>
+         </li>
+       </ul>
+     </nav>
+   </div>
+ </div>
+
+{% endblock %}
