kategorien und texte

--- a/basics/templates/basics/needs_timeline.html
+++ b/basics/templates/basics/needs_timeline.html
@@ -23,9 +23,10 @@
         	Category <span class="caret"></span>
       	</button>
       	<ul class="dropdown-menu">
-        	<li><a href="#">Water</a></li>
-        	<li><a href="#">Energy</a></li>
-        	<li><a href="#">Pokemon</a></li>
+        	<li><a href="#">Eat & Drink</a></li>
+        	<li><a href="#">hygiene supplies</a></li>
+        	<li><a href="#">Medic</a></li>
+		<li><a href="#">Help</a></li>
         	<li role="separator" class="divider"></li>
         	<li><a href="#">Separated link</a></li>
       	</ul>
