--- a/basics/templates/basics/home.html
+++ b/basics/templates/basics/home.html
@@ -35,9 +35,10 @@
         	Category <span class="caret"></span>
       	</button>
       	<ul class="dropdown-menu">
-        	<li><a href="#">Water</a></li>
-        	<li><a href="#">Energy</a></li>
-        	<li><a href="#">Pokemon</a></li>
+        	<li><a href="#">Eat & Drink</a></li>
+        	<li><a href="#">hygiene supplies</a></li>
+        	<li><a href="#">Medic</a></li>
+		<li><a href="#">Help</a></li>
         	<li role="separator" class="divider"></li>
         	<li><a href="#">Separated link</a></li>
       	</ul>
@@ -59,29 +60,102 @@
   <br>
   <div class="row">
  		 <div class="[ col-xs-12 col-sm-offset-2 col-sm-8 ]">
-
  			 <ul class="event-list">
-         {% for need in needs%}
-         <li>
-            <time datetime="2014-07-20 2000">
-               <span class="day">20</span>
-               <span class="month">Jan</span>
-               <span class="year">2014</span>
-               <span class="time">9:41 PM</span>
-             </time>
-           <div class="info">
-             <h2 class="title">{{ need.headline }}</h2>
-             <p class="desc">{{ need.text }}</p>
-            <ul>
-               <li style="width:33%;">comments (3)</li>
-               <li style="width:34%;">write comment<span class="fa fa-question"></span></li>
-               <li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-map-marker"></span>Location</a></li>
-               <li style="width:20%;"> <span class="glyphicon glyphicon-thumbs-up"></span> Like</li>
-             </ul>
-           </div>
+ 				 <li>
+ 				 	<time datetime="2014-07-20 2000">
+ 						 <span class="day">31</span>
+ 						 <span class="month">Jan</span>
+ 						 <span class="year">2014</span>
+ 						 <span class="time">04:20 PM</span>
+ 					 </time>
+ 					 <div class="info">
+ 						 <h2 class="title">Emergency generator</h2>
+ 						 <p class="desc">we need electricity!</p>
+        	<ul>
+ 							 <li style="width:33%;">got: 1<span class="glyphicon glyphicon-ok"></span></li>
+ 							 <li style="width:34%;">need: 1<span class="fa fa-question"></span></li>
+ 							 <li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-map-marker"></span>Location</a></li>
+ 						 </ul>
+ 					 </div>
 
-         </li>
-         {% endfor %}
+ 				 </li>
+ 				 <li>
+ 				 	<time datetime="2014-07-20 2000">
+ 						 <span class="day">19</span>
+ 						 <span class="month">Jan</span>
+ 						 <span class="year">2014</span>
+ 						 <span class="time">04:20 PM</span>
+ 					 </time>
+ 					 <div class="info">
+ 						 <h2 class="title">Toothbrush</h2>
+ 						 <p class="desc">Irgend eine Beschreibung</p>
+ 						 <ul>
+ 							<li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-pencil"></span> keep writing</a></li>
+               				<li style="width:20%;"> <span class="glyphicon glyphicon-ok"></span> Completed?</li>
+               				<li style="width:20%;"> <span class="glyphicon glyphicon-thumbs-up"></span> Like</li>
+							<li style="width:20%;"> <span class="glyphicon glyphicon-flag"></span> Report</li>
+ 						 </ul>
+ 					 </div>
+ 					 <div class="social">
+ 						 <ul>
+ 							 <li class="facebook" style="width:33%;"><a href="#facebook"><span class="fa fa-facebook"></span></a></li>
+ 							 <li class="twitter" style="width:34%;"><a href="#twitter"><span class="fa fa-twitter"></span></a></li>
+ 							 <li class="google-plus" style="width:33%;"><a href="#google-plus"><span class="fa fa-google-plus"></span></a></li>
+ 						 </ul>
+ 					 </div>
+ 				 </li>
+
+ 				 <li>
+ 					 <time datetime="2014-07-20 2000">
+ 						 <span class="day">14</span>
+ 						 <span class="month">Jan</span>
+ 						 <span class="year">2014</span>
+ 						 <span class="time">8:00 PM</span>
+ 					 </time>
+
+ 					 <div class="info">
+ 						 <h2 class="title">Toothpaste</h2>
+ 						 <p class="desc">Need Toothpaste</p>
+ 						 <ul>
+ 							 <li style="width:33%;">got: 1<span class="glyphicon glyphicon-ok"></span></li>
+ 							 <li style="width:34%;">need: 3<span class="fa fa-question"></span></li>
+ 							 <li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-map-marker"></span>Location</a></li>
+ 						 </ul>
+ 					 </div>
+ 					 <div class="social">
+ 						 <ul>
+ 							 <li class="facebook" style="width:33%;"><a href="#facebook"><span class="fa fa-facebook"></span></a></li>
+ 							 <li class="twitter" style="width:34%;"><a href="#twitter"><span class="fa fa-twitter"></span></a></li>
+ 							 <li class="google-plus" style="width:33%;"><a href="#google-plus"><span class="fa fa-google-plus"></span></a></li>
+ 						 </ul>
+ 					 </div>
+ 				 </li>
+
+ 				 <li>
+ 					 <time datetime="2014-07-31 1600">
+ 						 <span class="day">01</span>
+ 						 <span class="month">Jan</span>
+ 						 <span class="year">2014</span>
+ 						 <span class="time">4:00 PM</span>
+ 					 </time>
+
+ 					 <div class="info">
+ 						 <h2 class="title">Bed sheets</h2>
+ 						 <p class="desc"> need a few bed sheets</p>
+ 						 <ul>
+ 							<li style="width:33%;">got: 1<span class="glyphicon glyphicon-ok"></span></li>
+               <li style="width:34%;">need: 3<span class="fa fa-question"></span></li>
+               <li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-map-marker"></span>Location</a></li>
+ 						 </ul>
+ 					 </div>
+ 					 <div class="social">
+ 						 <ul>
+ 							 <li class="facebook" style="width:33%;"><a href="#facebook"><span class="fa fa-facebook"></span></a></li>
+ 							 <li class="twitter" style="width:34%;"><a href="#twitter"><span class="fa fa-twitter"></span></a></li>
+ 							 <li class="google-plus" style="width:33%;"><a href="#google-plus"><span class="fa fa-google-plus"></span></a></li>
+ 						 </ul>
+ 					 </div>
+ 				 </li>
  			 </ul>
  		 </div>
  	 </div>
