add categorie to needs

--- a/basics/templates/basics/profil.html
+++ b/basics/templates/basics/profil.html
@@ -12,9 +12,9 @@
         		<br>
         		<b>
 				Name: {{Userdata.pseudonym}} 				<br>
-				Email: {{Userdata.email}}  					<br>
+				Email: {{user.email}}  						<br>
 				Phonenumber: {{Userdata.phone}} 			<br>
-				Registered since: {{Userdata.registertate}}	<br>
+				Registered since: {{user.date_joined}}		<br>
 				Default auxiliary radius: 					<br>
 				Notification:								<br><br>
 				</b>
