--- a/basics/templates/basics/needs_new.html
+++ b/basics/templates/basics/needs_new.html
@@ -11,20 +11,17 @@
 				<form class="form" role="form" method="post" accept-charset="UTF-8" id="login-nav">
 					{%csrf_token%}
 					<p style="font-size:160%;"> category <p\>
-					<select class="form-control">
-						<option value="Eat & Drink">Eat & Drink</option>
-						<option value="hygiene supplies">hygiene supplies</option>
-						<option value="Medic">Medic</option>
-						<option value="Help">Help</option>
-						<option value="...">...</option>
-						<option value="...">...</option>
-						</select>
+					<select class="form-control" name="{{need.categorie.name}}">
+						{% for categorie in categories%}
+							<option value="{{categorie.id}}">{{categorie.name}}</option>
+						{% endfor %}
+					</select>
 					<p style="font-size:160%;"> description <p\>
 						<div class="form-group">
-							<input type="description" class="form-control input-lg" placeholder="headline" name="headline"  rows="4"></textarea>
+							<input type="description" class="form-control input-lg" placeholder="headline" name="{{need.headline.name}}"  rows="4"></textarea>
 						</div>
 					<div class="form-group">
-						<textarea type="description" class="form-control input-lg" placeholder="description" name="text"  rows="4"></textarea>
+						<textarea type="description" class="form-control input-lg" placeholder="description" name="{{need.text.name}}"  rows="4"></textarea>
 					</div>
 					<p style="font-size:160%;"> location <p\>
 					<div class="checkbox" >
