--- a/basics/templates/basics/home.html
+++ b/basics/templates/basics/home.html
@@ -72,7 +72,7 @@
  						 <h2 class="title">Emergency generator</h2>
  						 <p class="desc">we need electricity!</p>
         	<ul>
- 							 <li style="width:33%;">got: 1<span class="glyphicon glyphicon-ok"></span></li>
+ 							 <li style="width:33%;">got: 0</li>
  							 <li style="width:34%;">need: 1<span class="fa fa-question"></span></li>
  							 <li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-map-marker"></span>Location</a></li>
  						 </ul>
@@ -90,10 +90,9 @@
  						 <h2 class="title">Toothbrush</h2>
  						 <p class="desc">Irgend eine Beschreibung</p>
  						 <ul>
- 							<li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-pencil"></span> keep writing</a></li>
-               				<li style="width:20%;"> <span class="glyphicon glyphicon-ok"></span> Completed?</li>
-               				<li style="width:20%;"> <span class="glyphicon glyphicon-thumbs-up"></span> Like</li>
-							<li style="width:20%;"> <span class="glyphicon glyphicon-flag"></span> Report</li>
+ 							  <li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-pencil"></span> keep writing</a></li>
+               	<li style="width:20%;"> <span class="glyphicon glyphicon-ok"></span> Completed?</li>
+							 <li style="width:20%;"> <span class="glyphicon glyphicon-flag"></span> Report</li>
  						 </ul>
  					 </div>
  					 <div class="social">
