--- a/basics/templates/basics/map_testing.html
+++ b/basics/templates/basics/map_testing.html
@@ -1,107 +1,220 @@
 {% extends 'basics/base.html' %}
 {% block content %}
-<script
-src="http://maps.googleapis.com/maps/api/js">
-</script>
+<head>
+<style>
+  
+	#map-container { 
+		height: 450px; 
+	}
 
-<script>
-var map;
-var marker;
-var myCenter=new google.maps.LatLng(51.508742,-0.120850);
-var geocoder;
-var infowindow;
-var x = document.getElementById("lat");
-var y = document.getElementById("lng");
+	button, .btn-primary, .btn-primary:focus {
+		background-color: #bbd153;
+  		border-color: #70962c;
+  		color: #4C4E49;
+	}
+	
+	.btn-primary:hover, .btn-primary:active:focus {
+		background-color: #96B440;
+		color: #4C4E49;
+	}	
 
-function initialize()
-{
-    geocoder = new google.maps.Geocoder()
-var mapProp = {
-  center:myCenter,
-  zoom:5,
-  mapTypeId:google.maps.MapTypeId.ROADMAP
-  };
+	#location-form {
+		margin-top: 15px;
+		margin-bottom: 15px;
+	}
 
-  map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+	.modal-header > h2 {
+		color: #bbd153;
+		font-weight: bold;
+	}
+	
+	.nav-tabs > li > a, .nav-tabs > li > a:hover, .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
+		color: #70962c;
+	}
 
-  google.maps.event.addListener(map, 'click', function(event) {
-    placeMarker(event.latLng);
-  });
-}
+</style>
+</head>
 
-function getLocation() {
-    if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(showPosition);
-    } else { 
-        x.innerHTML = "Geolocation is not supported";
-        y.innerHTML = "by this browser.";
-    }
-}
-
-function showPosition(position) {
-    document.getElementById("lat").innerHTML = "Latitude: " + position.coords.latitude;
-    document.getElementById("lng").innerHTML = "Longitude: " + position.coords.longitude;
-    var latlng={lat: parseFloat(position.coords.latitude), lng: parseFloat(position.coords.longitude)};
-    placeMarker(latlng);
-}
-
-function placeMarker(location) {
-    if(marker){
-        infowindow.close();
-        marker.setPosition(location)
-        geocoder.geocode({'location': location}, function(results, status){
-            infowindow.setContent(results[1].formatted_address);
-            infowindow.open(map,marker);
-        })   
-    } 
-    else{
-        marker = new google.maps.Marker({
-        position: location,
-        map: map,
-        });
-        geocoder.geocode({'location': location}, function(results, status){
-            infowindow = new google.maps.InfoWindow({content: results[1].formatted_address});
-            infowindow.open(map,marker);
-        })
-    }
-    document.getElementById("lat").innerHTML = "Latitude: " + location.lat();
-    document.getElementById("lng").innerHTML = "Longitude: " + location.lng();
-}
-
-$(".modal-choose-location").on("shown.bs.modal", function () {
-    google.maps.event.trigger(map, "resize");
-});
-
-
-google.maps.event.addDomListener(window, 'load', initialize);
-</script>
-
-	<button type="button" class="btn btn-info" data-toggle="modal" data-target=".modal-choose-location">choose location</button>
-		<div class="modal fade modal-choose-location"  role="dialog" aria-labelledby="choose-location" aria-hidden="true">
-			<div class="modal-dialog modal-lg">  							
-				<div class="modal-content">
-					<div class="modal-header">
-						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-							<span aria-hidden="true">&times;</span>
-						</button>
-						<h2 class="text-center">Choose your Location</h2>
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#location-map-modal">Choose location</button>
+<!-- Modal -->
+  <div class="modal fade" id="location-map-modal">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h2 class="text-center">Choose your Location via</h2>
+        </div>
+        <div class="modal-body">
+			<ul class="nav nav-tabs">
+  				<li role="presentation" class="active"><a href="#autolocation-map" aria-controls="autolocation-map" role="tab" data-toggle="tab">Autolocation or Map</a></li>
+  				<li role="presentation"><a href="#address" aria-controls="address" role="tab" data-toggle="tab">Address</a></li>
+			</ul>
+			<div class="tab-content">
+				<div role="tabpanel" class="tab-pane active" id="autolocation-map">
+					<div id="autolocation-map-container">
+						<div class="form-group" id="location-form">
+							The easiest way to get your location is to use the autolocation function. <button type="button" class="btn btn-primary" style="margin-left: 15px; margin-right: 15px" onclick="getLocation()">Get my Location</button> <br> Or click the map at your disired location.
+						</div>						
+<!--						<p id="lat">Latitude: </p)</br>
+						<p id="lng">Longitude: </p)</br>-->
+						<div class="form-group" id="location-form">
+							<div id="map-container"></div>
+						</div>
 					</div>
-					<div class="modal-body">
-				  	<!-- Introduction Row -->
-				       	<div class="row">
-				            <div class="col-lg-12">
-				                <button onclick="getLocation()">Get My Location</button>
-				                <p id="lat">Latitude: </p)<br>
-				                <p id="lng">Longitude: </p)<br>
-			               <div id="googleMap" style="width:500px;height:380px;"></div>
-			            </div>
-			        </div>
 				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-				</div>
-			</div>
-		</div>
-	</div>
+				<div role="tabpanel" class="tab-pane" id="address">
+					<div class="form-group" id="location-form">
+						<div class="row" style="margin: 0px">
+						 <form class="form-horizontal" role="form">
+
+
+          					<!-- Text input-->
+          					<div class="form-group" id="location-form">
+            					<label class="col-sm-2 control-label" for="textinput">Line 1</label>
+            					<div class="col-sm-10">
+              						<input type="text" placeholder="Address Line 1" class="form-control">
+            					</div>
+          					</div>
+
+          					<!-- Text input-->
+          					<div class="form-group" id="location-form">
+            					<label class="col-sm-2 control-label" for="textinput">Line 2</label>
+            						<div class="col-sm-10">
+             	 					<input type="text" placeholder="Address Line 2" class="form-control">
+           						</div>
+          					</div>
+
+          <!-- Text input-->
+          <div class="form-group" id="location-form">
+            <label class="col-sm-2 control-label" for="textinput">City</label>
+            <div class="col-sm-10">
+              <input type="text" placeholder="City" class="form-control">
+            </div>
+          </div>
+
+          <!-- Text input-->
+          <div class="form-group" id="location-form">
+            <label class="col-sm-2 control-label" for="textinput">State</label>
+            <div class="col-sm-4">
+              <input type="text" placeholder="State" class="form-control">
+            </div>
+
+            <label class="col-sm-2 control-label" for="textinput">Postcode</label>
+            <div class="col-sm-4">
+              <input type="text" placeholder="Post Code" class="form-control">
+            </div>
+          </div>
+
+
+
+          					<!-- Text input-->
+          					<div class="form-group" id="location-form">
+            					<label class="col-sm-2 control-label" for="textinput">Country</label>
+            						<div class="col-sm-10">
+             							<input type="text" placeholder="Country" class="form-control">
+            						</div>
+          						</div>
+							</div>
+
+
+						</form>
+						</div>
+					</div>
+        		</div>
+        <div class="modal-footer">
+			<button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
+          	<button type="button" class="btn btn-primary" data-dismiss="modal">Save</button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
+</div><!-- /container -->
+
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>
+<script src="http://maps.googleapis.com/maps/api/js"></script>
+<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script>
+
+	var map;
+	var marker;
+	var myCenter=new google.maps.LatLng(51.508742,-0.120850);
+	var geocoder;
+	var infowindow;
+	var x = document.getElementById("lat");
+	var y = document.getElementById("lng");
+
+	function initialize() {
+    	geocoder = new google.maps.Geocoder()
+		var mapProp = {
+  			center:myCenter,
+  			zoom:2,
+  			mapTypeId:google.maps.MapTypeId.ROADMAP,
+			mapTypeControl: false,
+            panControl:false,
+            rotateControl:false,
+			mapTypeControl:true,
+            streetViewControl: false
+  		};
+
+  		map = new google.maps.Map(document.getElementById("map-container"),mapProp);
+
+  		google.maps.event.addListener(map, 'click', function(event) {
+    		placeMarker(event.latLng);
+  		});
+	}
+
+	function getLocation() {
+    	if (navigator.geolocation) {
+    	    navigator.geolocation.getCurrentPosition(showPosition);
+    	} else { 
+    	    x.innerHTML = "Geolocation is not supported";
+    	    y.innerHTML = "by this browser.";
+    	}
+	}
+
+	function showPosition(position) {
+//  	document.getElementById("lat").innerHTML = "Latitude: " + position.coords.latitude;
+//		document.getElementById("lng").innerHTML = "Longitude: " + position.coords.longitude;
+    	var latlng={lat: parseFloat(position.coords.latitude), lng: parseFloat(position.coords.longitude)};
+    	placeMarker(latlng);
+	}
+
+
+	function placeMarker(location) {
+	    if(marker){
+	        infowindow.close();
+	        marker.setPosition(location)
+	        geocoder.geocode({'location': location}, function(results, status){
+	            infowindow.setContent(results[1].formatted_address);
+	            infowindow.open(map,marker);
+	        })   
+	    } 
+	    else{
+	        marker = new google.maps.Marker({
+	        position: location,
+	        map: map,
+	        });
+	        geocoder.geocode({'location': location}, function(results, status){
+	            infowindow = new google.maps.InfoWindow({content: results[1].formatted_address});
+	            infowindow.open(map,marker);
+	        })
+	    }
+	    document.getElementById("lat").innerHTML = "Latitude: " + location.lat();
+	    document.getElementById("lng").innerHTML = "Longitude: " + location.lng();
+	}
+
+	google.maps.event.addDomListener(window, 'load', initialize);
+      
+    //start of modal google map
+    $('#location-map-modal').on('shown.bs.modal', function () {
+    	google.maps.event.trigger(map, "resize");
+        map.setCenter(myCenter);
+    });
+
+</script>
+
        
 {% endblock %}
