--- a/basics/templates/basics/map_testing.html
+++ b/basics/templates/basics/map_testing.html
@@ -202,6 +202,8 @@
 	            infowindow.open(map,marker);
 	        })
 	    }
+	    map.setZoom(13);
+		map.setCenter(marker.getPosition());   
 	    document.getElementById("lat").innerHTML = "Latitude: " + location.lat();
 	    document.getElementById("lng").innerHTML = "Longitude: " + location.lng();
 	}
