added counter on startpage

--- a/basics/templates/basics/actofgoods_startpage.html
+++ b/basics/templates/basics/actofgoods_startpage.html
@@ -15,7 +15,7 @@
 				<div id="counter-container">
 					<div id="counter-inner">			
 						<div id="counter">
-							1000230012	<!-- TODO hier noch die richtige anzahl einfuegen -->
+							{{counter}}	<!-- TODO hier noch die richtige anzahl einfuegen -->
 						</div>
 					</div>
 				</div>
