--- a/basics/templates/basics/aboutus.html
+++ b/basics/templates/basics/aboutus.html
@@ -1,5 +1,8 @@
 {% extends 'basics/base.html' %}
 {% block content %}
+      <div>
+        <iframe width="640" height="390" src="../maptesting" frameborder="0" allowfullscreen></iframe>
+      </div>
        <!-- Introduction Row -->
         <div class="row">
             <div class="col-lg-12">
