Included location in startpage

--- a/basics/templates/basics/map_testing.html
+++ b/basics/templates/basics/map_testing.html
@@ -1,6 +1,8 @@
 
 <head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <style>
+
 
 	#map-container {
 		height: 450px;
