--- a/basics/templates/basics/actofgoods_startpage.html
+++ b/basics/templates/basics/actofgoods_startpage.html
@@ -369,6 +369,9 @@
   								</div>
 							</div>
 						</div>
+            <div class="form-group">
+              {% include 'basics/map_testing.html' %}
+            </div>
 						<div class="form-group">
 							<input type="submit" class="btn btn-block btn-lg btn-primary" value="Register"/>
 						</div>
@@ -381,7 +384,7 @@
 
 					</form>
 				</div>
-        
+
 			</div>
 		</div>
 	</div>
