--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -19,9 +19,9 @@
 	    		margin: 0;
     			padding: 0;
 		}
-		html, body {    	
+		html, body {
 			height: 100%;
-			/*font-size: 18px;*/		
+			/*font-size: 18px;*/
 		}
 		#wrapper {
 			position: relative;
@@ -156,7 +156,7 @@
 														<div class="help-block text-right"><a href="{% url 'basics:reset_password_page'%}">Forgot the password?</a></div>
 													</div>
 													<div class="form-group">
-														<button type="submit" class="btn btn-primary btn-block">Sign in</button>
+														<button type="submit" id="login" class="btn btn-primary btn-block">Sign in</button>
 													</div>
 													<div class="checkbox" >
 														<label>
