added example for alert in aboutus

--- a/basics/templates/basics/aboutus.html
+++ b/basics/templates/basics/aboutus.html
@@ -1,7 +1,9 @@
 {% extends 'basics/base.html' %}
 {% block content %}
-    
 
+      <div class="alert alert-info " role="alert">We need a location to provide you best information. Add here.
+        {% include "basics/map_testing.html" %}
+      </div>
        <!-- Introduction Row -->
         <div class="row">
             <div class="col-lg-12">
