--- a/basics/templates/basics/needs_all.html
+++ b/basics/templates/basics/needs_all.html
@@ -63,20 +63,17 @@
      <ul class="event-list">
        {% for need in needs%}
        <li>
-          <time datetime="2014-07-20 2000">
-             <span class="day">20</span>
-             <span class="month">Jan</span>
-             <span class="year">2014</span>
-             <span class="time">9:41 PM</span>
+          <time>
+             <div>{{ need.date }}</div>
            </time>
          <div class="info">
            <h2 class="title">{{ need.headline }}</h2>
            <p class="desc">{{ need.text }}</p>
           <ul>
-             <li style="width:33%;">comments (3)</li>
-             <li style="width:34%;">write comment<span class="fa fa-question"></span></li>
+             <li style="width:20%;">comments (3)</li>
              <li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-map-marker"></span>Location</a></li>
              <li style="width:20%;"> <span class="glyphicon glyphicon-thumbs-up"></span> Like</li>
+             <li style="width:20%;"><a href="{% url 'basics:chat' %}">Help</a><span class="fa fa-question"></span></li>
            </ul>
          </div>
 
