--- a/basics/templates/basics/profil_edit.html
+++ b/basics/templates/basics/profil_edit.html
@@ -13,6 +13,11 @@
     					<div class="form-group">
 					<input type="description" class="form-control input-lg" placeholder= {{ userdata.pseudonym }} name="pseudo"  >
 						</div>
+
+					<div class="form-group">
+					<input type="description" class="form-control input-lg" placeholder= {{ user.email }} name="email"  >
+						</div>
+		
 					<div class="form-group">
 					{% if userdata.phone == "" %}
 					<input type="description" class="form-control input-lg" placeholder= phonenumber name="phone"  >
